tests/NormalTests/paczka1/fuzzy1/71793128.err
Error in line 21: A720 A213 -1,2
Error in line 25: lJjIjr A189 36,3
Error in line 22: 80nObJTu5 A348 46,6
Error in line 31: 80nObJTu5 A720 1,3
Error in line 20: A720 A213 20,0
Error in line 36: 0fnSTmXrDqi A189 90,5
